--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,12 @@
   width: 100%;
 }
 
+.toolbar-back {
+  display: flex;
+  align-items: center;
+  margin-left: -15px;
+}
+
 .toolbar-logo {
   display: flex;
   align-items: center;
